# dd-python

./: .editorconfig  .gitignore  .pre-commit-config.yaml  pyproject.toml
src/smartschedule/shared/: capability.py  capability_selector.py  resource_name.py  time_slot.py
src/smartschedule/sorter/: node.py  nodes.py
