[tool.poetry]
name = "dd-python"
version = "0.1.0"
description = "Domain Drivers Python"
authors = ["Mateusz Kubaszek"]
license = "MIT"
readme = "README.md"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = "^3.12"
poetry-core = "^1.9.0"

[tool.ruff]
target-version = "py312"
line-length = 120